fix: AssetBalanceService 조회 로직 수정